# Yuqian_Shanghai-Energy

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  PROJECT_MEMORY.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  install_energyplus.sh
config/: a6_rules.yaml  archetypes.yaml  b1_baseline.yaml  c_engine.yaml  calibration_targets.yaml  poi_mapping.yaml  shanghai.yaml  simulation_matrix.yaml  standards.yaml  storey_height_by_archetype.csv
config/archetypes/: education.yaml  exhibition.yaml  government_office.yaml  healthcare.yaml  hotel.yaml  mixed_use_podium.yaml  mixed_use_tower.yaml  office.yaml  other_public.yaml  residential_high_rise.yaml  residential_mid_rise.yaml  shopping_mall.yaml  sport_culture.yaml  transportation.yaml
data/raw/: README.md
data/raw/benchmark/: residential_annual_eui.csv  wang_2026_public_monthly.csv
data/raw/cnbh/: README.md
data/raw/epd_oneclick/: Building_EPD.xlsx  README.md
data/raw/euluc/: README.md
data/raw/poi/: a3_done_cells.txt  a3_pois_clean.csv  a3_pois_clean.gpkg  a3_pois_raw.jsonl  a3_valwin_shop.jsonl
data/raw/validation/: README.md  b0_spotcheck_10.csv  b2_annotation_list_v0.csv  shanghai_validation_set_master.xlsx  shanghai_validation_set_v0.csv
data/reference/: README.md  a3_cell_meta.csv  a3_scan_grid.gpkg  a6_class3_10_profile.csv  a6_coverage_stats.csv  a6_validation_diagnostics.csv  b1_confidence_distribution.csv  b1_confusion_matrix.csv  b1_district_diagnostics.csv  b1_feature_importance.csv  b1_metrics.csv  b1_per_class_metrics.csv  c1_office_v0_monthly.csv  euluc_class_mapping.csv  storey_height_by_band.csv  supertall_height_floor_crosswalk.csv
outputs/simulation/: matrix_v0_monthly_eui.csv
scripts/: a3_batch.py  a3_dryrun_v3.py  a3_grid_audit.py  a3_probe_missed.py  a3_qc.py  a3_qc_diag.py  a3_valwin_topup.py  a5_storey_height.py  a6_stage1.py  b1_baseline.py  build_validation_workbook.py  cnbh_clip_shanghai.py  cnbh_saturation_probe.py  ep_investigation.py  floor_semantics.py  qc_shanghai_2023.py  qc_shanghai_2026.py  run_module_a.py  run_module_b.py  run_module_c.py  run_module_d.py  run_module_e.py  run_pipeline.py
scripts/c_engine/: README.md  c1_office.py  run_matrix.py
src/buildings_shanghai/: __init__.py
tests/: test_b1_features.py  test_c_engine.py  test_smoke.py  test_validation.py
weather/: CHN_SH_Shanghai-Baoshan.583620_TMYx.2011-2025.ddy  CHN_SH_Shanghai-Baoshan.583620_TMYx.2011-2025.epw  CHN_SH_Shanghai-Baoshan.583620_TMYx.2011-2025.stat  CHN_SH_Shanghai.583620_CSWD.ddy  CHN_SH_Shanghai.583620_CSWD.epw  CHN_SH_Shanghai.583620_CSWD.stat
(+30 files in other folders)
