[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buildings-shanghai"
version = "0.1.0"
description = "Shanghai UBEM pipeline extending the Buildings.city framework (Lyu et al., 2026) to a hot-summer / cold-winter megacity."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Tianyi Chen" },
]
keywords = [
    "UBEM",
    "EnergyPlus",
    "Shanghai",
    "urban building energy modeling",
    "embodied carbon",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    # ---- Geospatial ----------------------------------------------------------
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "fiona>=1.9",
    "contextily>=1.5",
    # ---- Core scientific stack ----------------------------------------------
    "pandas>=2.1",
    "numpy>=1.26,<2.0",
    "scipy>=1.11",
    # ---- Machine learning ----------------------------------------------------
    "scikit-learn>=1.4",
    "imbalanced-learn>=0.12",
    "xgboost>=2.0",
    "lightgbm>=4.1",
    "optuna>=3.5",
    # ---- Building energy simulation -----------------------------------------
    "eppy>=0.5.63",
    "geomeppy>=0.11.8",
    "honeybee-energy>=1.106",
    "ladybug-core>=0.42",
    # ---- Visualization -------------------------------------------------------
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "folium>=0.15",
    # ---- Utilities -----------------------------------------------------------
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "joblib>=1.3",
    # ---- Notebooks -----------------------------------------------------------
    "jupyter>=1.0",
    "ipykernel>=6.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.urls]
Repository = "https://github.com/tianyichen1001/yuqian_shanghai-energy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"buildings_shanghai" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q"
